# rust-encrypt-stream

./: Cargo.toml  README.md
src/: encstream.rs  lib.rs  main.rs
