[package]
name = "encrypt-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.29.1", features = [
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
] }
anyhow = "*"
tokio-stream = "0.1.14"
chacha20 = "0.9.1"
hex-literal = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
